--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -1,4 +1,4 @@
 <h1>Hello World</h1>
 
 <%= link_to "Sign Up", new_user_path %>
-<%= link_to "Sign In", user_path(1) %>
+<%= link_to "Sign In", new_session_path %>
