--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,5 +1,8 @@
-<h1><%= @user.email %> Cohorts</h1>
-<% @cohorts.each do |cohort| %>
+<div class="profile">
+  <h1><%= @user.email %> Cohorts</h1>
+  <% @cohorts.each do |cohort| %>
   <p><%= cohort.cohort_type %> <%= cohort.name %></p>
   <p><%= link_to "Show all students", cohort_path(cohort.id) %></p>
-<% end %>
+  <% end %>
+
+</div>
