--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,3 +23,74 @@
      font-size:small;
      color:#666;
  }
+
+ #topBar {
+  max-width: 99.7%;
+  height: 125px;
+}
+
+#topBar img {
+  max-width: 300px;
+  max-height: 300px;
+  margin-left: 20px;
+  margin-top: -15px;
+}
+
+div {
+  background-color: rgba(255,255,255,.8);
+}
+
+.buttons {
+  background-color: #fa4542;
+  color: white;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  width: 35%;
+  min-width: 103px;
+  height: 50px;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.clear {
+  clear: both;
+}
+.profile {
+  background-color: white;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.75);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+  max-width: 70%;
+  border: 3px solid black;
+  min-height: 50%;
+  padding-top: 10px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.profile img {
+  max-width: 300px;
+  max-height: 300px;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.75);
+
+}
+
+.profLeft {
+  max-width: 50%;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  text-align: center;
+
+}
+
+.profRight {
+  max-width: 50%;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+}
