--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Edit Your Account</h1>
-<%= render 'form' %>
+<div class="profile">
+  <h1>Edit Your Account</h1>
+  <%= render 'form' %>
+</div>
