--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,5 @@
-<h2>Create an Account</h2>
-<%= render 'form' %>
+<div class="profile">
+  <h2>Create an Account</h2>
+  <%= render 'form' %>
+
+</div>
