Adds the ability to update the brand homework

--- a/app/views/users/homework.html.erb
+++ b/app/views/users/homework.html.erb
@@ -1,3 +1,3 @@
 <div class="profile">
-  <p><%= link_to @link.first.title, '/users/' + "#{@user.id}" %></p>
+  <p><%= link_to @link.first.title, '/users/' + "#{@user.id}" + "/homeworks/new" %></p>
 </div>
