--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
       <%= link_to "See All Cohorts", user_cohorts_path(@user) %></p>
       <p><%= link_to "Edit Your Profile", edit_user_path(@user) %>
         <%= link_to 'Delete Profile', user_path(@user), method: :delete, data: { confirm: 'Are you sure?' } %></p>
-        <p><%= link_to "Homework", new_user_homework_path(@user)%> </p>
+        <p><%= link_to "Homework", "/homework/#{@user.id}"%> </p>
   </div>
   <div class="profRight">
 <select id="weekDD" name="">
