Adds homework fixes and proper routing

--- a/app/views/homeworks/show.html.erb
+++ b/app/views/homeworks/show.html.erb
@@ -1,1 +1,3 @@
-<%= link_to @homework.title, @homework.address %>
+<%= link_to @homework.title, "/homework/#{@user.id}/brand/#{@homework.id}" %>
+
+asdfasdf
