Fixes seeding issue to create blank homeworks, adds styling to forms, general bug fixes

--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="profile">
+<div class="formHolder">
   <h1><%= @cohort.cohort_type %> <%= @cohort.name %></h1>
   <% @cohort.users.each do |student| %>
   <h4>Email: <%= student.email %></h4>
