--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,6 @@
-<div class="profile">
+<div class="formHolder">
   <h1>Edit Your Account</h1>
-  <%= render 'form' %>
+    <div class="">
+      <%= render 'form' %>
+    </div>
 </div>
