--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
      margin:0;
      padding:0;
      height:100%; /* needed for container min-height */
-     background-image: url("https://www.connect2classes.com/wp-content/uploads/2016/04/General-Assembly-class-2.jpg");
+     background-image: url("gaClass.jpg");
      background-size: cover;
      font-family:arial,sans-serif;
      font-size:small;
@@ -61,6 +61,21 @@ div {
 .clear {
   clear: both;
 }
+
+.formHolder {
+  background-color: white;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.75);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+  max-width: 70%;
+  border: 3px solid black;
+  min-height: 50%;
+  padding-top: 10px;
+  margin-bottom: 30px;
+  padding-left: 20px;
+}
+
 .profile {
   background-color: white;
   box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.75);
