--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -1,8 +1,8 @@
-<div class="profile">
+<div class="formHolder">
   <h1>All the cohorts</h1>
   <% @cohorts.each do |cohort| %>
-  <p><%=cohort.cohort_type%><%= cohort.name %></p>
-  <p><%= link_to cohort.cohort_type, cohort_path(cohort)  %></p>
+  <h3><%=cohort.cohort_type%><%= cohort.name %></h3>
+  <p><%= link_to "View all Students", cohort_path(cohort)  %></p>
   <p><%= link_to "Join this Cohort", new_user_cohort_membership_path(@user.id,cohort.id)  %></p>
   <p><%= link_to 'Delete Cohort', user_cohort_path(@user.id,cohort.id), method: :delete, data: { confirm: 'Are you sure?' } %></p>
   <% end %>
