--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,14 +1,14 @@
 
   <%= form_for @user do |f| %>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+    <p><%= f.label :email %>
+    <%= f.text_field :email %></p>
 
-  <%= f.label :image_url %>
-  <%= f.text_field :image_url %>
+    <p><%= f.label :password %>
+    <%= f.password_field :password %></p>
 
-  <%= f.submit "Submit" %>
-  <% end %>
-  
+    <p><%= f.label :image_url %>
+    <%= f.text_field :image_url %></p>
+
+  <p>  <%= f.submit "Submit" %></p>
+    <% end %>
