--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,7 @@
       <p><b>Homework:</b> <%= roadmap.homework %></p>
       <p><b>Small Group:</b> <%= roadmap.smallGroup %></p>
       <p><b>Resources:</b> <%= roadmap.resources %></p>
-      <p>Links: <%= link_to @link.title, @link.address %></p>
+      <p>Links: <%= link_to @link.title, @link.address, :target => "_blank" %></p>
     </div>
     <% end %>
   </div>
