Adds everything up to the API

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,6 @@
  }
 
  #topBar {
-  max-width: 99.7%;
   height: 125px;
 }
 
@@ -56,6 +55,17 @@ div {
   height: 50px;
   font-size: 18px;
   text-decoration: none;
+}
+
+.buttonsProfile {
+  display: block;
+  background-color: #fa4542;
+  color: white;
+  text-decoration: none;
+  width: 110px;
+  height: 25px;
+  text-align: center;
+  margin: 5px;
 }
 
 .clear {
@@ -103,8 +113,20 @@ div {
   padding-right: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
-  text-align: center;
+}
 
+.buttonFlex {
+  display: flex;
+  max-width: 300px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.profLeft h2 {
+  text-align: center;
 }
 
 .profRight {
@@ -112,4 +134,25 @@ div {
   padding-right: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
+}
+
+.studentContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.xxx {
+  margin: 10px;
+}
+
+.studentContainer img {
+  max-width: 300px;
+  max-height: 300px;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.75);
+
+}
+
+.navigation {
+  display: flex;
+  flex-wrap: wrap;
 }
