--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,5 +10,8 @@
     <p><%= f.label :image_url %>
     <%= f.text_field :image_url %></p>
 
-  <p>  <%= f.submit "Submit" %></p>
+    <p><%= f.label :homework_id %>
+    <%= f.text_field :homework_id %></p>
+
+    <p><%= f.submit "Submit" %></p>
     <% end %>
